--- a/web-app/src/Assets/styles/index.css
+++ b/web-app/src/Assets/styles/index.css
@@ -8,7 +8,8 @@
   --header-1:64px;
   --header-2:40px;
   --header-3:24px;
-  --subtitle:14px;
+  --header-4:20px;
+  --subtitle:14px
   --body:16px;
   --small:14px;
   --button-text:10px;
