--- a/web-app/src/layouts/Navbar/navbar.css
+++ b/web-app/src/layouts/Navbar/navbar.css
@@ -1,81 +1,44 @@
-.navbar-wrapper {
-    background-color: white !important;
-    width: 100vw;
-}
-
-.navbar-inner {
-    max-width:1560px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    position: static;
-}
-
-.navbar-icon{
-    width:560px;
-    margin: .5rem;
-    /* margin-right: 18rem; */
-    float: left;
-}
-
-.navbar-icon img:nth-child(1){
-    width: 40px;
-    height: 40px;
-    object-fit: contain;
-}
-
-.navbar-link{
-    /* margin-left: 18rem; */
-    width: 560px;
-    height:fit-content;
-}
 .navbar-link-wrapper{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: row;
     align-items:baseline;
+    margin-left: 10px;
 }
-.navbar-link button{
-    margin-right: .5rem;
-    border-radius: 60px;
-    border:2px solid var(--primary);
-    padding: 5px 10px;
-    text-align: center;
-    font-weight: 700;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 8px 4px;
-    cursor: pointer;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
+
+.large-e {
+    object-fit:scale-down;
+    height: 20%;
+    width: 20%;
 }
-.navbar-link button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-.navbar-btn{
-    background-color:white;
-    color:#858585;
-}
-.navbar-btn-filled {
+
+.btn-contained {
     background-color: var(--primary);
-    color:white;
+    border: solid solid var(--primary);
+    padding: 6px 10px;
+    border-radius: 20px;
+    color:#fff;
+    font-weight: bold;
+    cursor: pointer;
 }
 
+.btn-contained:hover {
+    background-color: #fff;
+    color: var(--primary);
+    border: 1px solid var(--primary);
+}
 
+.btn-outline {
+    color: var(--primary);
+    background-color: #fff;
+    border-radius: 20px;
+    border-color: var(--primary);
+    padding: 6px 10px;
+    margin-right: 10px;
+    font-weight: bold;
+    cursor: pointer;
+}
 
-@media only screen and (max-width: 768px) {
-    .navbar-wrapper {
-        /* background-color: white !important; */
-        width: fit-content;
-    }
-    .navbar-inner {
-        max-height: 768px;
-        justify-content: start;
-    }
-    .navbar-link, button{
-        display:hidden;
-    }
-  
+.btn-outline:hover {
+    background: var(--primary);
+    color: #fff;
 }
