Section-Ui-fixes

--- a/web-app/src/Components/Infohero/infohero.css
+++ b/web-app/src/Components/Infohero/infohero.css
@@ -3,7 +3,7 @@
     width: 100%;
     min-height: 460px;
     overflow-x: hidden;
-    background-color: white;
+    background: transparent;
 }
 
 .infoHero-wrapper {
