--- a/web-app/src/Components/Hero/hero.css
+++ b/web-app/src/Components/Hero/hero.css
@@ -97,7 +97,7 @@ input::placeholder {
         top: 45%;
         bottom: 48%;
         left: 10%;
-        right:35%
+        right:35%;
     }
 
     .hero-input{
