--- a/web-app/src/Components/Hero/hero.css
+++ b/web-app/src/Components/Hero/hero.css
@@ -4,12 +4,12 @@
     height: 80%;
     overflow: hidden;
     color: white;
-    /* position: static; */
+    position: relative;
 }
 
 .hero-background {
     width: 100%;
-    height: 860px;
+    height: 760px;
     object-fit:cover;
     position: static;
     top:0;
@@ -18,39 +18,31 @@
 .hero-container {
     width: 100%;
     height: 100%;
-    /* padding: 5rem; */
+    position: absolute;
+    top:15%;
+    left:8%;
 }
 
 .hero-header{
-    position: absolute;
     font-size: var(--header-1);
     font-weight: bold;
     line-height: 70px;
-    top: 25.21%;
-    bottom: 75.23%;
-    left: 10%;
 }
 
 .hero-subheader{
     display:inline-block;
-    position: absolute;
     line-height: 29px;
-    /* font-size: var(--subtitle); */
+    font-size: 20px;
+    margin-top: 1.5rem;
     font-weight: 700;
-    top: 52%;
-    bottom: 48%;
-    left: 10%;
-    right:45%
+    width: 55%;
 }
 
 .hero-input{
     -webkit-appearance: none;
     -moz-appearance: none;
-    position: absolute;
-    top: 65%;
-    bottom: 35%;
-    left: 10%;
-    right:45%;
+    margin-top: 2rem;
+    width: 50%;
 }
 
 .hero-input-wrapper {
@@ -61,52 +53,32 @@
 .hero-input input{
     width: 100%;
     box-sizing: border-box;
-    border: 2px solid white;
-    border-radius: 4px;
+    border: 2px solid var(--primary);
     font-size: 16px;
-    color: black;
-    background-color: white;
+    border-radius: 20px;
+    color: white;
+    background-color: var(--primary);
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
 }
 
 input::placeholder {
-    color: #707070;
+    color: white;
 }
-
-@media only screen and (min-width: 1200px) {
-    .hero-subheader{
-        font-size: var(--header-3);
-        font-weight: 800;
-        top: 52%;
-        bottom: 48%;
-        left: 10%;
-        right:35%
-    }
-    .hero-input{
-        top: 70%;
-    }
-}
-
 
 @media only screen and (min-width: 1500px) {
+    
     .hero-subheader{
-        font-size: var(--header-3);
-        font-weight: 800;
-        top: 45%;
-        bottom: 48%;
-        left: 10%;
-        right:35%;
+        font-size: 64px;
+        font-weight: 600;
+    }
+    .hero-subheader{
+        font-size: 24px;
     }
 
-    .hero-input{
-        top: 55%;
-        bottom: 35%;
-        left: 10%;
-        right:45%;
-    }
 }
+
 
 @media only screen and (max-width: 768px) {
     .hero-section{
@@ -114,44 +86,41 @@ input::placeholder {
         height: 100vh;
         object-fit:contain;
         overflow: hidden;
-        position: relative;
     }
 
     .hero-background {
         width: 100%;
         height: 100%;
-        position:relative;
+        /* position:relative; */
     }
 
     .hero-container{
         margin:0;
         padding: 0;
+        top:20%;
     }
 
     .hero-header {
-        font-size: var(--header-3);
+        font-size: var(--header-2);
         line-height: 10px;
-        top:30%;
     }
 
     .hero-subheader {
-        font-size: var(--subtitle);
-        display: block;
+        font-size: var(--body);
+        display: inline-block;
         line-height: 10px;
-        top:45%;
-        right: 10%;
+        width: 80%;
     }
 
     .hero-input{
         margin-top: 2rem;
-        top: 55%;
-        right:10%;
+        width: 80%;
     }
 
     .hero-input input{
         border: 1px solid var(--primary);
         font-size: var(--small);
         padding: 3px 5px 3px 5px;
-        width: 95%;
+        width: 100%;
     }
 }
