--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -4,12 +4,16 @@
     background-color:rgba(236, 236, 236, 1);
 }
 
+header h1{
+    font-size: 32px;
+}
 .personal-form-main {
     display: flex;
     flex-direction: column;
-    justify-content:flex-start;
+    /* justify-content:flex-start; */
     align-items:center;
     padding: 5%;
+    margin-top: 5rem;
 }
 
 form{
@@ -33,10 +37,11 @@ form{
    justify-content:baseline;
    align-items: center;
    margin-top: 2rem;
+   width: 80%;
 }
 
 form input{
-    margin-top: .5rem;
+    margin-top: 1rem;
     padding: .5%;
     width: 100%;
     height: 4vh;
@@ -61,7 +66,9 @@ form input::placeholder{
     width: 100%;
     height: 6vh;
     padding-left: 1rem;
+    margin-top: 1rem;
 }
+
 
 .personal-form-btn:hover{
     background-color:white ;
@@ -77,7 +84,7 @@ form .input-header {
 
 .input-top{
     display: flex;
-    width:auto;
+    width: 100%;
     flex-direction: column;
 }
 
@@ -102,6 +109,7 @@ form .input-header {
         width:auto;
         align-items:center;
         justify-content: center;
+        margin: 0;
     }
     .personal-form-input{
         align-items:flex-start;
