--- a/web-app/src/layouts/Navbar/navbar.css
+++ b/web-app/src/layouts/Navbar/navbar.css
@@ -1,4 +1,165 @@
-.navbar-logo {
+.header {
+  position: fixed;
+  background: white;
+  width: 100%;
+  height: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 20px;
+  z-index: 1;
+  
+}
+
+img {
+  width: 150px;
+  
+}
+
+.large-e {
+  object-fit: scale-down;
+  height: 20%;
+  width: 20%;
+}
+.btn-contained {
+  background-color: var(--primary);
+  border: solid solid var(--primary);
+  padding: 6px 10px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+ .btn-contained:hover {
+  background-color: #fff;
+  color: var(--primary);
+  border: 1px solid var(--primary);
+  transition: 0.5s;
+}
+
+.btn-outline {
+  color: var(--primary);
+  background-color: #fff;
+  border-radius: 20px;
+  border-color: var(--primary);
+  padding: 6px 10px;
+  margin-right: 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.hamburger {
+  display: none;
+}
+
+.btn-outline:hover {
+  background: var(--primary);
+  color: #fff;
+  transition: 0.5s;
+} 
+
+.nav-menu {
+  display: flex;
+  text-align: right;
+  /* border: 5px solid red; */
+}
+
+.nav-menu li {
+  list-style: none;
+  padding: 8px 12px;
+}
+
+.nav-menu a {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.hamburger {
+  display: none;
+}
+
+@media screen and (max-width:1240px){
+  .hamburger {
+      display: block;
+  }
+
+  .nav-menu {
+      position: absolute;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      top: 0;
+      left: -100%;
+      text-align: center;
+      width: 100%;
+      height: 100vh;
+      transition: 0.5s;
+      z-index: -1;
+      
+     
+  }
+
+  .nav-menu.active {
+      left: 0;
+  }
+
+  .nav-menu li {
+      padding: 1rem 0;
+  }
+
+  .nav-menu a {
+      font-size: 2rem;
+      color: white;
+  }
+
+  .btn-contained {
+    border: none;
+    background-color: white;
+    color: var(--primary);
+  }
+  .btn-outline {
+    border: none;
+    background-color: none;
+  }
+  .btn-outline:hover {
+    background: none;
+    color: none;
+  }
+
+  img {
+      width: 60%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .navbar-logo {
   display: flex;
   flex-direction: row;
   align-items: baseline;
@@ -11,16 +172,6 @@
   align-items: center;
 }
 
-/* .navbar-link-wrapper a{
-    text-decoration: none;
-    cursor: pointer;
-}
-
-.navbar-link-wrapper span{
-    margin-left: 2rem;
-    color: black;
-    font-weight: 600;
-} */
 
 .large-e {
   object-fit: scale-down;
@@ -36,10 +187,9 @@
   color: #fff;
   font-weight: bold;
   cursor: pointer;
-  /* margin-left: 5rem; */
-}
+} */
 
-.btn-contained:hover {
+/* .btn-contained:hover {
   background-color: #fff;
   color: var(--primary);
   border: 1px solid var(--primary);
@@ -63,29 +213,29 @@
 .btn-outline:hover {
   background: var(--primary);
   color: #fff;
-}
+} */
 
-@media only screen and (max-width: 768px) {
-  /* .navbar-link-wrapper{
-        position: relative;
-    } */
+/* @media only screen and (max-width: 768px) {
+ 
 
   .links {
-    /* min-width:fit-content; */
-    width: 768px;
-    height: 130vh;
-    background-color: white;
-    position: absolute;
-    top: 60px;
-    left: -100%;
-    display: flex;
+  
     flex-direction: column;
-    justify-content: flex-start;
     align-items: flex-end;
+    justify-content: flex-start;
+    width: 60%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: flex;
     text-align: justify;
+    transition: all 0.8s ease-in-out;
+    z-index: 100;
+    background-color: white;
   }
   .links a {
-    width: 100%;
+    width: 50%;
     padding: 0 5rem;
     color: black;
     text-align: right;
@@ -109,8 +259,8 @@
     background: none;
     color: none;
   }
-
+  
   .hamburger {
     display: block;
   }
-}
+} */
