--- a/web-app/src/layouts/Navbar/navbar.scss
+++ b/web-app/src/layouts/Navbar/navbar.scss
@@ -1,4 +1,7 @@
-.header {
+.navbarPage {
+
+  
+  .header {
   position: fixed;
   background: white;
   width: 100%;
@@ -82,6 +85,7 @@ img {
 @media screen and (max-width:1240px){
   .hamburger {
       display: block;
+      margin-right: 30px;
   }
 
   .nav-menu {
@@ -143,6 +147,9 @@ img {
 
 
 
+
+
+}
 
 
 
