--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -40,7 +40,7 @@ form{
    width: 80%;
 }
 
-form input{
+form input, select{
     margin-top: 1rem;
     padding: .5%;
     width: 100%;
@@ -50,12 +50,18 @@ form input{
     
 }
 
-form input::placeholder{
+form input::placeholder,
+select *::placeholder{
     padding-left: 1rem;
 }
 
 .personal-form-btn{
     background-color: var(--primary);
+    background-image: url(../../Assets/pngs/icons8-right-arrow-30.png);
+    background-position:right;
+    background-size: 20px;
+    color:#fff;
+    background-repeat: no-repeat;
     color: white;
     cursor: pointer;
     border: 2px solid var(--primary);
@@ -66,14 +72,37 @@ form input::placeholder{
     width: 100%;
     height: 6vh;
     padding-left: 1rem;
+    padding-right: 2rem;
     margin-top: 1rem;
 }
 
 
-.personal-form-btn:hover{
+.personal-form-btn:hover,
+.business-form-btn:hover{
     background-color:white ;
     color: var(--primary);
     border: 2px solid white;
+}
+
+.business-form-btn{
+    background-color: var(--primary);
+    background-image: url(../../Assets/pngs/icons8-shopping-mall-24.png);
+    background-position:right;
+    background-size: 20px;;
+    color:#fff;
+    background-repeat: no-repeat;
+    color: white;
+    cursor: pointer;
+    border: 2px solid var(--primary);
+    font-weight: 600;
+    text-align: left;
+    border-radius: 10px;
+    padding: .5%;
+    width: 100%;
+    height: 6vh;
+    padding-left: 1rem;
+    /* padding-right: 2rem; */
+    margin-top: 1rem;
 }
 
 form .input-header {
@@ -123,7 +152,7 @@ form .input-header {
         align-items:flex-start;
     }
 
-    form input{
+    form input, select{
         width: 100%; ;
     }
 
