--- a/web-app/src/Components/Hero/hero.css
+++ b/web-app/src/Components/Hero/hero.css
@@ -19,7 +19,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    top:15%;
+    top:20%;
     left:8%;
 }
 
@@ -97,11 +97,12 @@
     .hero-container{
         margin:0;
         padding: 0;
-        top:20%;
+        top:25%;
     }
 
     .hero-header {
-        font-size: var(--header-2);
+        width: 95%;
+        font-size: var(--header-3);
         line-height: 10px;
     }
 
