--- a/web-app/src/layouts/Navbar/navbar.scss
+++ b/web-app/src/layouts/Navbar/navbar.scss
@@ -1,11 +1,9 @@
 .navbarPage {
-
-  
   .header {
   position: fixed;
   background: white;
   width: 100%;
-  height: 20px;
+  height: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,8 +13,7 @@
 }
 
 img {
-  width: 150px;
-  
+  width: 100px;
 }
 
 .large-e {
@@ -32,6 +29,7 @@ img {
   color: #fff;
   font-weight: bold;
   cursor: pointer;
+  margin-right: 2rem;
 }
 
  .btn-contained:hover {
@@ -47,7 +45,7 @@ img {
   border-radius: 20px;
   border-color: var(--primary);
   padding: 6px 10px;
-  margin-right: 10px;
+  margin-right: 2px;
   font-weight: bold;
   cursor: pointer;
 }
@@ -82,7 +80,13 @@ img {
   display: none;
 }
 
-@media screen and (max-width:1240px){
+@media screen and (max-width:768px){
+
+  .navbarPage{
+    width: 100%;
+    overflow-x:hidden;
+  }
+
   .hamburger {
       display: block;
       margin-right: 30px;
