--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -6,6 +6,7 @@
 
 header h1{
     font-size: 32px;
+    margin-bottom: 1rem;
 }
 .personal-form-main {
     display: flex;
@@ -28,7 +29,7 @@ form{
 }
 
 .personal-form .header-text{
-    font-weight: 100;
+    font-weight: 600;
 }
 
 .personal-form-input{
