--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -124,9 +124,14 @@ form .input-header {
 }
 
 .input-feedback{
-    color: red;
+    background-color: var(--secondary);
+    color: white;
     font-size: 12px;
     margin-left: 1rem;
+    border-radius: 20px;
+    padding: .2rem;
+    padding-left: 5px;
+    margin-top: 5px;
 }
 
 @media only screen and (max-width: 768px) {
