--- a/web-app/src/Pages/login/login.css
+++ b/web-app/src/Pages/login/login.css
@@ -3,6 +3,7 @@
   height: 100vh;
   background-color: rgba(236, 236, 236, 1);
   position: relative;
+  overflow-y: hidden;
 }
 
 .login-container {
@@ -20,7 +21,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 25%;
+  top: 20%;
   left: 5%;
 }
 .login h1 {
