--- a/web-app/src/Components/Membership/membership.css
+++ b/web-app/src/Components/Membership/membership.css
@@ -79,9 +79,13 @@ input[type="submit"]:hover{
 }
 
 @media only screen and (max-width: 768px) {
+    .membership-container{
+        height:180px;
+    }
     .membership-img img{
         object-fit: contain;
-        margin-left: 15%;
+        margin-left: 2%;
+        width: 95%;
     }
 
     .membership-content {
@@ -99,19 +103,22 @@ input[type="submit"]:hover{
         padding-right: 0;
         padding-left: 0;
         width: 20%;
-        padding: 2px;
+        padding: 14px;
         font-size: var(--mobile-font);
+        margin-top: 1rem;
     }
 
     .membership-input input[type="email"]{
         width: 60%;
         height: 8px;
-        padding: 2px;
+        padding: 10px;
         font-size: var(--mobile-font);
+        margin-top: 1rem;
     }
 
     .membership-header {
-        font-size: var(--mobile-font);
+        font-size: var(--button-text);
+        width: 100%;
     }
 
     .membership-input {
