--- a/web-app/src/layouts/Navbar/navbar.scss
+++ b/web-app/src/layouts/Navbar/navbar.scss
@@ -23,7 +23,7 @@ img {
 }
 .btn-contained {
   background-color: var(--primary);
-  border: solid solid var(--primary);
+  border: solid var(--primary);
   padding: 6px 10px;
   border-radius: 20px;
   color: #fff;
@@ -101,7 +101,7 @@ img {
       left: -100%;
       text-align: center;
       width: 100%;
-      height: 100vh;
+      min-height: 1024px;
       transition: 0.5s;
       z-index: -1;
       
