--- a/web-app/src/Components/Infohero/infohero.css
+++ b/web-app/src/Components/Infohero/infohero.css
@@ -1,7 +1,7 @@
 .infoHero {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 550px;
     overflow-x: hidden;
     background: white;
 }
