payout-page-build

--- a/web-app/src/Components/DownloadHero/downloadHero.css
+++ b/web-app/src/Components/DownloadHero/downloadHero.css
@@ -79,6 +79,8 @@
     .downloadHero-container {
         position: absolute;
         height: 100%;
+        background-color: white;
+        color:black;
     }
 
     .downloadHero-Header{
