--- a/web-app/src/Pages/dashboard/pages/payout/payout.css
+++ b/web-app/src/Pages/dashboard/pages/payout/payout.css
@@ -2,7 +2,7 @@
     margin: 2rem 4rem;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .payout-navbar {
