--- a/web-app/src/Components/Widgetss/widget.scss
+++ b/web-app/src/Components/Widgetss/widget.scss
@@ -21,7 +21,7 @@
     }
 
     .right{
-        margin: auto 0;
+        margin: auto 1rem;
     }
     
     .left,
@@ -29,7 +29,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        width: 80%;
+        width: 100%;
     }
     
     .title {
@@ -37,10 +37,12 @@
         font-weight: bold;
         font-size: 15px;
         color: black;
+        font-weight: 500;
         // justify-content: space-around;
     }
     
     .counter {
+        margin-top: 0;
         font-size: 24px;
         font-weight: 700;
     }
