--- a/web-app/src/Pages/dashboard/pages/overview/overview.css
+++ b/web-app/src/Pages/dashboard/pages/overview/overview.css
@@ -1,5 +1,9 @@
 .overview-section {
+    width: 90%;
     margin: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    /* overflow-x: hidden; */
 }
 
 .overview-dropdown{
@@ -7,14 +11,16 @@
 }
 
 .widgets{
-    width: 60%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
+
 .charts{
-    width: 550px;
-    height: 300px;
-    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    /* width: 600px; */
 }
 
 .widgets, .charts {
@@ -24,6 +30,25 @@
     padding-bottom: 15px;  
 } 
 
-/* .charts {
-    padding: 25px 10px;
-} */
+.orders{
+    width: 100%;
+    margin-top: 2rem;
+    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+}
+
+.order-container{
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    color: rgba(0, 0, 0, 0.713) ;
+}
+
+.order-container h5{
+    border-bottom: .5px solid rgba(0, 0, 0, 0.2);
+}
+
+.order-container table{
+    font-weight: 600;
+    font-size: 12px;
+}
