Significant UI changes plus Functionalities on Dashboard

--- a/web-app/src/Components/DashCharts/dashCarts.css
+++ b/web-app/src/Components/DashCharts/dashCarts.css
@@ -1,7 +1,6 @@
 .dashCharts{
-    width: 620px;
-    padding: 10px;
-    height: 300px;
+    width: 70%;
+    height: 100%;
     box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
