--- a/web-app/src/Components/ProgressBar/progressBar.css
+++ b/web-app/src/Components/ProgressBar/progressBar.css
@@ -1,25 +1,38 @@
-.progress-section{
-    margin-top: 1rem;
-    height: 100%;
-    width: 40%;
-    display: flex;
-    flex-direction: row;
-    box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+.progress-section {
+  margin-top: 1rem;
+  height: 140px;
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
 }
 
-.progress{
-    flex: 1;
+.progress {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.progress-rating{
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 1.4rem auto;
+.progress-rating {
+  flex: 1.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2.25rem auto;
+}
+.progress-rating h1 {
+  display: flex;
+  font-weight: 800;
+  font-size: 40px;
+  line-height: 49px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: #feb524;
 }
 
-.progress-rating h1{
-    margin: 1rem 1.5rem;
-    color:#FEB524;
+.progress-rating h3 {
+    font-size: 12px;
 }
