--- a/web-app/src/Pages/dashboard/pages/menu/menu.css
+++ b/web-app/src/Pages/dashboard/pages/menu/menu.css
@@ -35,7 +35,7 @@
   cursor: pointer;
 }
 
-.menu-link{
+.menu-link {
   text-decoration: none;
   color: white;
 }
@@ -92,7 +92,7 @@
 .menu-img {
   width: 50px;
 }
-.menu-input-img{
+.menu-input-img {
   display: flex;
   flex-direction: column;
 }
@@ -101,7 +101,7 @@
   border-bottom: 2px dotted red;
 }
 
-.menu-input-img h4{
+.menu-input-img h4 {
   margin-top: 2rem;
 }
 
@@ -110,44 +110,66 @@
   width: 200px;
 }
 
-.menu-input-img .labels{
+.menu-input-img .labels {
   margin-top: 0.5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.menu-inputImg{
+.menu-inputImg {
   width: 75px;
   height: 60px;
   object-fit: contain;
   cursor: pointer;
 }
 
-.second{
+.second {
   /* margin-top: 6rem; */
   margin-left: 8rem;
 }
 
 /* table */
-.menu-table table{
-  display:table;
+.menu-table table {
+  display: table;
   border-collapse: collapse;
   width: 100%;
 }
 
-.menu-table table thead, tbody{
+.menu-table table thead,
+tbody {
   text-align: center;
 }
 
-.menu-table table td, th{
+.menu-table table td,
+th {
   text-align: center;
-  border-bottom: .1px solid rgba(0, 0, 0, 0.2);
-  border-right:.1px solid rgba(0, 0, 0, 0.2) ;
+  border-bottom: 0.1px solid rgba(0, 0, 0, 0.2);
+  border-right: 0.1px solid rgba(0, 0, 0, 0.2);
+}
+.menu-table tr {
+  cursor: pointer;
 }
 
-.menu-table table th,td{
+.menu-table table th,
+td {
   width: 100px;
   height: 10vh;
-  padding: .25rem;
+  padding: 0.25rem;
+}
+.menu-table .btns{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.btns p{
+  text-decoration: none;
+  color: var(--primary);
+  cursor: pointer;
+}
+
+.btns p:hover{
+  color: var(--secondary);
 }
