--- a/web-app/src/Components/Sidebar/sidebar.css
+++ b/web-app/src/Components/Sidebar/sidebar.css
@@ -4,11 +4,11 @@
   height: 100vh;
   box-shadow: 4px 0 4px -2px rgba(0, 0, 0, 0.25);
 }
-main {
+.container main {
   width: 100%;
   padding: 20px;
 }
-.sidebar {
+.container .sidebar {
   background: #ff8323;
   color: white;
   min-height: 100%;
@@ -18,7 +18,7 @@ main {
   align-items: center;
   padding: 55px 40px;
 }
-.link, .sidebar-button {
+.link {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,22 +30,13 @@ main {
   /* gap: 20px; */
 }
 
-.sidebar-button{
-  color: white;
-  background-color: red;
-  border-radius: 10px;
-  margin-left: 3rem;
-  margin-top: 5rem;
-  padding: 10px 30px;
-  cursor: pointer;
-  border: 2px solid transparent;
-}
 
 .link:hover {
   background: white;
   color: #ff8323;
   transition: all 0.5s;
 }
+
 .icon {
   font-size: 22px;
 }
@@ -59,3 +50,43 @@ main {
   background-color: var(--primary-variant);
 }
 
+.profile-space:hover {
+  background: white;
+  color: #ff8323;
+  transition: all 0.5s;
+}
+
+.profile-link:hover{
+  color: #ff8323;
+}
+
+.sidebar-button{
+  color: red;
+  background-color: white;
+  border-radius: 20px;
+  padding: 3px 8px;
+  cursor: pointer;
+  border: 2px solid transparent;
+}
+
+.profile-space{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 3rem;
+  padding: 5px 40px;
+}
+
+.profile-space span{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  margin-left: 0.5rem;
+}
+
+.profile-space a{
+  text-decoration: none;
+  color: white;
+}
