--- a/web-app/src/Pages/dashboard/pages/menu/menu.css
+++ b/web-app/src/Pages/dashboard/pages/menu/menu.css
@@ -173,3 +173,17 @@ td {
 .btns p:hover{
   color: var(--secondary);
 }
+
+/* empty menu page */
+.empty-menu{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 5%;
+  left: 45%;
+}
+
+.empty-menu h1{
+  margin-bottom: 2rem;
+}
