--- a/web-app/src/Pages/dashboard/pages/menu/menu.css
+++ b/web-app/src/Pages/dashboard/pages/menu/menu.css
@@ -153,9 +153,13 @@ th {
 
 .menu-table table th,
 td {
-  width: 100px;
+  width: 20px;
   height: 10vh;
-  padding: 0.25rem;
+  padding: 0.125rem;
+}
+
+.menu-table p {
+  font-size: 10px;
 }
 .menu-table .btns{
   width: 100%;
