--- a/web-app/src/Pages/login/login.css
+++ b/web-app/src/Pages/login/login.css
@@ -9,7 +9,7 @@
 .backArrow{
   text-decoration: none;
   color: #000;
-  width: 100px;
+  width: 100%;
   display: flex;
   margin: 0;
 }
@@ -112,7 +112,7 @@
     display: none;
   }
   .login-left main{
-    margin: 0 auto;
+    margin: 1rem 2rem;
     max-width: 80%;
     max-height: 90vh;
   }
