--- a/web-app/src/Pages/pagenotfound/pagenotfound.scss
+++ b/web-app/src/Pages/pagenotfound/pagenotfound.scss
@@ -36,30 +36,34 @@
     }
 
     @media screen and (max-width:768px){
+        .pagenotfound{
+            overflow-x: hidden;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            h1{
+                font-size: 16px;
+                margin: 0 2rem;
+                text-align: center;
+            }
+        }
         img {
-            width: 500px;
-            height: 350px;
-            margin-left: 15%;
-            margin-top: 20%;
+            width: 85%;
+            height: 60%;
+            object-fit:contain;
+            margin: 0 auto;
         }
-
-        .pagenotfound h1 {
-            margin-left: 20%;
-            margin-top: 4%;
-            font-size: 20px;
-            
-        }
+        
 
         .btn-return {
-        
             background-color: #ea3c3d;
-            margin-left: 40%;
-            margin-top: 4%;
-            padding: 15px 15px;
+            margin: 0 auto;
+            padding: 7.5px 7.5px;
             border-radius: 10px;
             border: 1px solid #ea3c3d;
             color: #fff;
-            font-size: 15px;
+            font-size: 12px;
             font-weight: bold;
             cursor: pointer;
     }
