--- a/web-app/src/Pages/dashboard/pages/profile/profile.css
+++ b/web-app/src/Pages/dashboard/pages/profile/profile.css
@@ -98,7 +98,7 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: 500;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 29px;
   width: 260px;
 }
@@ -124,9 +124,13 @@
 
 #username,
 #website,
-#photo {
+#photo,
+#fullName {
   border: 1px solid #a5a5a5;
-  border-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
   height: 40px;
   width: 50%;
   display: flex;
@@ -135,6 +139,24 @@
   margin-top: 0;
 }
 
+.vertical-line {
+  border: 1px solid #a5a5a5;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  height: 49px;
+  width: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0;
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 10px;
+  line-height: 140%;
+}
 #kitchen-description {
   height: 150px;
   width: 50%;
@@ -150,11 +172,14 @@
   font-size: 12px;
   line-height: 140%;
   color: black;
-  
 }
 
+.businessHead {
+  margin-top: 50px;
+  padding-bottom: 10px;
+}
 
-.kitchen-container{
+.kitchen-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
