--- a/web-app/src/Pages/dashboard/pages/menu/menu.css
+++ b/web-app/src/Pages/dashboard/pages/menu/menu.css
@@ -94,12 +94,26 @@
 }
 .menu-input-img {
   display: flex;
+  height: 200px;
   flex-direction: column;
+  position: relative;
 }
 
-.menu-input-img .uploaded {
-  border-bottom: 2px dotted red;
+.img-display img {
+  width: 128px;
+  height: 128px;
+  position: absolute;
+  bottom: 0.5rem;
+  right: 0.5rem;
 }
+
+.img-display:not(:empty) + .Image1 {
+  display: none;
+}
+
+/* .img-display {
+  display: none;
+} */
 
 .menu-input-img h4 {
   margin-top: 2rem;
@@ -122,6 +136,7 @@
   height: 60px;
   object-fit: contain;
   cursor: pointer;
+  margin-top: 2rem;
 }
 
 .second {
@@ -161,25 +176,25 @@ td {
 .menu-table p {
   font-size: 10px;
 }
-.menu-table .btns{
+.menu-table .btns {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
 
-.btns p{
+.btns p {
   text-decoration: none;
   color: var(--primary);
   cursor: pointer;
 }
 
-.btns p:hover{
+.btns p:hover {
   color: var(--secondary);
 }
 
 /* empty menu page */
-.empty-menu{
+.empty-menu {
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -188,6 +203,6 @@ td {
   left: 45%;
 }
 
-.empty-menu h1{
+.empty-menu h1 {
   margin-bottom: 2rem;
 }
