--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -41,7 +41,7 @@ form{
    width: 80%;
 }
 
-form input, select{
+.personal-form input, select{
     margin-top: 1rem;
     padding: .5%;
     width: 100%;
