--- a/web-app/src/layouts/Footer/footer.css
+++ b/web-app/src/layouts/Footer/footer.css
@@ -3,7 +3,6 @@
   background-color: black;
   padding: 20px 0px;
   width: 100%;
-
 }
 
 .footer-container {
@@ -13,8 +12,9 @@
 .row {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
+  width: 100%;
 }
 
 ul {
@@ -29,11 +29,11 @@ ul {
   justify-content: space-around;
 }
 
-.link-btn{
-  margin-top: 2rem;
+.link-btn {
+  margin-top: 1rem;
 }
 
-.footer-logo img{
+.footer-logo img {
   width: 40%;
   object-fit: contain;
   cursor: pointer;
@@ -49,49 +49,54 @@ ul {
   margin-bottom: 20px;
 }
 
-.footer-col {
+.footer h5 {
+  color: white;
+  margin-bottom: 0;
+  margin-top: 1rem;
+}
 
+.footer-col {
   padding: 25px 40px;
   display: flex;
   flex-direction: column;
-   
 }
 
 .footer-col ul li:not(:last-child) {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
-.footer-col ul li a{
-  color:white;
+.footer-col ul li a {
+  color: white;
   text-decoration: none;
   transition: all 0.3s ease;
 }
 
-.footer-col ul li a:hover{
-  color:white;
+.footer-col ul li a:hover {
+  color: white;
   padding-left: 8px;
 }
 
-.footer-bottom-text  {
-  display:flex;
+.footer-bottom-text {
+  display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 35px 100px 0px 0px; 
+  padding: 35px 100px 0px 0px;
   /* border: 5px solid red; */
-  color : white;
+  color: white;
 }
 
 @media only screen and (max-width: 768px) {
-  .footer{
+  .footer {
     overflow-x: hidden;
     max-width: 100%;
   }
 
-  .row, .footer-bottom-text {
+  .row,
+  .footer-bottom-text {
     display: flex;
     flex-direction: column;
   }
-  .footer-bottom-text  {
+  .footer-bottom-text {
     align-items: center;
     justify-content: space-between;
   }
