--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -41,15 +41,14 @@ form {
   width: 80%;
 }
 
-=======
-.personal-form input, select{
-    margin-top: 1rem;
-    padding: .5%;
-    width: 100%;
-    height: 4vh;
-    border-radius: 10px;
-    border: 2px solid rgba(236, 236, 236, 1);
-    
+.personal-form input,
+select {
+  margin-top: 1rem;
+  padding: 0.5%;
+  width: 100%;
+  height: 4vh;
+  border-radius: 10px;
+  border: 2px solid rgba(236, 236, 236, 1);
 }
 
 form input::placeholder,
