--- a/web-app/src/Components/PersonalForm/personalForm.css
+++ b/web-app/src/Components/PersonalForm/personalForm.css
@@ -51,6 +51,11 @@ select {
   border: 2px solid rgba(236, 236, 236, 1);
 }
 
+.personal-form select {
+  height: 6vh;
+  width: 102%;
+}
+
 form input::placeholder,
 select *::placeholder {
   padding-left: 1rem;
