--- a/web-app/src/Pages/login/login.css
+++ b/web-app/src/Pages/login/login.css
@@ -53,7 +53,7 @@
   font-size: 16px;
   line-height: 22px;
   text-align: center;
-
+  margin-bottom: 1rem;
   color: #707070;
 }
 
@@ -67,12 +67,11 @@
   border-radius: 5px;
 }
 
-#login-username{
+#login-username {
   border-radius: 10px;
   padding: 0 0 0 10px;
   border: none;
   outline: none;
-
 }
 .password-input {
   display: flex;
@@ -85,13 +84,11 @@
   border-radius: 10px;
 }
 
-
-#password{
+#password {
   padding: 0 0 0 10px;
   border: none;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-
 }
 
 .password-input input:focus {
@@ -99,8 +96,8 @@
   outline: none;
   border: 1px thin;
 }
-.password-input:focus{
-  border: black
+.password-input:focus {
+  border: black;
 }
 
 .input-check {
