--- a/web-app/src/layouts/Navbar/navbar.scss
+++ b/web-app/src/layouts/Navbar/navbar.scss
@@ -239,7 +239,7 @@
   .links a {
     width: 50%;
     padding: 0 5rem;
-    color: black;
+    color: hsl(0, 0%, 0%);
     text-align: right;
     z-index: 5;
     margin-top: 2rem;
