--- a/web-app/src/Components/Widgetss/widget.scss
+++ b/web-app/src/Components/Widgetss/widget.scss
@@ -37,7 +37,7 @@
         display: flex;
         font-weight: bold;
         font-size: 15px;
-        color: black;
+        color: hsl(0, 0%, 0%);
         font-weight: 500;
         // justify-content: space-around;
     }
@@ -89,7 +89,7 @@
         width: max-content;
         font-size: 12px;
         border-bottom: 1px;
-        color: black;
+        color: hsl(0, 0%, 0%);
         text-decoration: none;
     }
 
